2010-02-10  yalovoy <yalovoy@gmail.com>
	* src/gui/RuleSetModel.cpp: fixes #1223: GUI crash while adding a host to a group
	 To reproduce:
	 - open test-fw1 / Policy by double clicking Policy object
	 - expand Objects/Groups and Objects/Hosts tree branches
	 - open group LDA-Servers by double clicking it
	 - drag host ldap-server1 to the group dialog

2010-02-10  vadim  <vadim@vk.crocodile.org>

	* UsageResolver.cpp (list): fixes #1222 modification of host or fw
	settings of a member firewall does not trigger cluster recompile

	* InterfaceDialog.cpp (InterfaceDialog::validate): fixes #1221
	warning dialogs for the incorrect interface name would not go
	away.  If user entered incorrect name of the
	subinterace (e.g. name that is not a valid VLAN subinterface name)
	the GUI would pop up warning dialog infinitely.

	* ../src/gui/ProjectPanel_events.cpp (ProjectPanel::event): this
	change attempts to fix a bug that causes main menu item Edit /
	Paste (keyboard shortcut Ctrl-V) to stop working. The bug is hard
	to reproduce and we were not able to find reliable scenario to
	trigger it.

	* PolicyCompiler_ipt.cpp (specialCaseWithFWInDstAndOutbound::processNext):
	fixes #1220 "bridging fw rule using all multicast object in
	destination does not produce any iptables rules".

2010-02-07  vadim  <vadim@vk.crocodile.org>

	* src/gui/ClusterGroupDialog.cpp (ClusterGroupDialog::applyChanges):
	fixes #1215 "Edit protocol parameters" button gets disabled for no
	reason. This button would get disabled after certain manipulations
	in the cluster group object dialog even when no changes were made.

	* FWCmdChange.cpp (FWCmdChangeOptionsObject::notify): fixes #1212
	Cluster object was not marked for recompile when user edited
	conntrack group parameters

2010-02-06  vadim  <vadim@vk.crocodile.org>

	* src/pflib/PolicyCompiler_pf_writers.cpp (PrintRule::processNext):
	fixes #1210 "syntax error in PF rule - "modulate state" is