@@ -13,6 +13,7 @@
 ##
 ## Set path to all utilities that we need
 
+IFCONFIG="ifconfig"
 PFCTL="{{$path_pfctl}}"
 SYSCTL="{{$path_sysctl}}"
 LOGGER="{{$path_logger}}"
